--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -11,6 +11,7 @@
   <meta http-equiv="Content-Security-Policy"
     content="default-src 'self'; script-src 'self'; style-src fonts.googleapis.com 'self' 'unsafe-inline'; font-src fonts.gstatic.com;img-src 'self' data:" />
 
+  <link href="./style.css" rel="stylesheet">
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
     rel="stylesheet">
